--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -3,9 +3,9 @@ spring:
     name: ExpenseShare
 
   datasource:
-    url: jdbc:mysql://localhost:3306/expense_db
-    username: root
-    password: root
+    url: { URL }
+    username: 
+    password: 
     type: com.zaxxer.hikari.HikariDataSource
     hikari:
       maximum-pool-size: 10
